--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "@supabase/supabase-js": "^2.0.0-rc.8",
+    "@tailwindcss/forms": "^0.5.3",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
@@ -19,6 +20,7 @@
     "cookie": "^0.5.0",
     "date-fns": "^2.29.2",
     "jsonwebtoken": "^8.5.1",
+    "libphonenumber-js": "^1.10.13",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
