--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
+    "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.3.1",
     "@supabase/supabase-js": "^2.0.0-rc.8",
     "@tailwindcss/forms": "^0.5.3",
