--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "libphonenumber-js": "^1.10.13",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-auth-code-input": "^3.2.1",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "seedrandom": "^3.0.5",
